--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@toast-ui/react-editor": "^2.2.0",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.44",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.25",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -22,7 +27,8 @@
     "start": "BROWSER=safari react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "development": "node ./server/src/scripts/development.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,7 +46,10 @@
     ]
   },
   "devDependencies": {
-    "electron": "^9.0.3"
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "electron": "^9.0.3",
+    "nodemon": "^2.0.4"
   },
   "homepage": "./"
 }
