--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@toast-ui/react-editor": "^2.2.0",
+    "@toast-ui/react-editor": "^2.3.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.44",
     "@types/react": "^16.9.35",
@@ -24,7 +24,7 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "BROWSER=safari react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
