--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -33,7 +34,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "development": "node ./server/src/scripts/development.js"
+    "server": "node ./server/src/scripts/development.js"
   },
   "eslintConfig": {
     "extends": "react-app"
