--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@toast-ui/react-editor": "^2.3.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.44",
     "@types/react": "^16.9.35",
@@ -14,11 +13,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.25",
-    "morgan": "^1.10.0",
+    "concurrently": "^5.3.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -30,11 +25,12 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
+    "full-start": "concurrently \"npm run start\" \"cd server && npm run start\"",
+    "full-build": "concurrently \"npm run build\" \"cd server && npm run build\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "node ./server/src/scripts/development.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,11 +47,6 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "electron": "^9.0.3",
-    "nodemon": "^2.0.4"
-  },
-  "homepage": "./"
+  "homepage": "./",
+  "proxy": "http://localhost:8001"
 }
