--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/node_modules
+/server/node_modules
 /.pnp
 .pnp.js
 
@@ -20,3 +22,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+node_modules
