--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.5",
+    "saslprep": "^1.0.3",
     "ts-loader": "^8.0.5",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
