--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
+    "@types/morgan": "^1.9.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
