--- a/server/package.json
+++ b/server/package.json
@@ -8,16 +8,20 @@
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
+    "@types/multer": "^1.4.4",
+    "@types/uuid": "^8.3.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.5",
     "saslprep": "^1.0.3",
     "ts-loader": "^8.0.5",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
+    "uuid": "^8.3.1",
     "webpack": "^5.1.3"
   },
   "devDependencies": {
