--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,13 @@
 /server/node_modules
 /.pnp
 .pnp.js
-/uploads/*
 
 # testing
 /coverage
 
 # production - cafe24 호스팅시 에는 아래 주석처리
-# build
-# web.js
+build
+web.js
 
 # misc
 .DS_Store
