--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "main": "./index.js",
+  "engines": {
+    "node": "12.18.3",
+    "npm": "6.14.6"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -26,8 +30,9 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "concurrently \"npm run react-start\" \"cd server && npm run express-start\"",
-    "build": "concurrently \"npm run react-build\" \"cd server && npm run express-build\"",
+    "start": "node index.js",
+    "dev:start": "concurrently \"npm run react-start\" \"cd server && npm run express-start\"",
+    "dev:build": "concurrently \"npm run react-build\" \"cd server && npm run express-build\"",
     "react-start": "react-scripts start",
     "react-build": "react-scripts build",
     "react-test": "react-scripts test",
