--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,13 @@
   "author": "",
   "dependencies": {
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.4",
     "@types/uuid": "^8.3.0",
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
