--- a/package.json
+++ b/package.json
@@ -54,23 +54,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8001",
-  "devDependencies": {
-    "@types/jest": "^24.9.1",
-    "jest": "^26.6.3",
-    "supertest": "^6.0.1",
-    "ts-jest": "^26.4.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "ts"
-    ],
-    "rootDir": "server",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "testEnvironment": "node"
-  }
+  "proxy": "http://localhost:8001"
 }
